# matextract-book

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.jupyter  LICENSE  OPENAI_KEY.env  README.md  VLMs.drawio  _config.yml  _quarto.yml  _toc.yml  genindex.html  index.aux  index.html  index.md  index.qmd  index.tex  objects.inv  pyproject.toml  references.bib  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: build_docker.yml  deploy.yml  lint.yml  publish.yml  test.yml
_book/: index.html  search.json
_book/agents/: agent.html
_book/constrained_decoding/: index.html
_book/document_parsing_and_cleaning/: document_parsing_and_cleaning.html  parsing.ipynb
_book/finetune/: choosing_paradigm.html
_book/obtaining_data/: annotation.html  crossref_search.html  crossref_search.ipynb  data_mining.html  data_mining.ipynb  obtaining_data.html
_book/ocr/nougat/: nougat.html
_book/site_libs/bootstrap/: bootstrap.min.css
_sources/: index.md
_sources/.github/: CODE_OF_CONDUCT.md
_sources/content/background/: resources_LLMs.md
_sources/content/beyond_text/: beyond_images.ipynb
_sources/content/biomass_case/: biomass_case.ipynb
_sources/content/constrained_decoding/: index.ipynb
_sources/content/document_parsing_and_cleaning/: parsing.ipynb
_sources/content/evaluations/: evaluations.ipynb
_sources/content/finetune/: choosing_paradigm.ipynb
_sources/content/obtaining_data/: annotation.ipynb  crossref_search.ipynb  data_mining.ipynb  index.md
_sources/content/perovskite/: constrained_formulas.ipynb
_static/: custom.css  notebook_start-cpu.ipynb
agents/: agent.ipynb
beyond_text/: beyond_images.ipynb
constrained_decoding/: constrained_formulas.ipynb  index.ipynb  utils.py
content/NMR_composition_matching/: ELS_section.ipynb  NMR_comp_matching.html  NMR_comp_matching.ipynb  NMR_data.json  S0022286012008502.xml  S0040402019306003.xml  XML_content.json
content/NMR_composition_matching/cache/: cache.db
content/agents/: agent.html  agent.ipynb
content/background/: resources_LLMs.html  resources_LLMs.md
content/beyond_text/: beyond_images.html  beyond_images.ipynb
content/biomass_case/: biomass_case.html  biomass_case.ipynb  ground_truth_data.json  strings_list.txt
content/biomass_case/parsed_article/article/: article.md  article_meta.json
content/constrained_decoding/: index.html  index.ipynb  utils.py
content/context_window/: Dealing_with_context_window.html  Dealing_with_context_window.ipynb
content/document_parsing_and_cleaning/: cleaning.html  cleaning.ipynb  document_parsing_and_cleaning.qmd  index.html  parsing.html  parsing.ipynb  raw_text.txt
content/document_parsing_and_cleaning/XML_files/: ao0c01342.xml
content/document_parsing_and_cleaning/XML_files_cleaned/: ao0c01342.tei.xml
content/document_parsing_and_cleaning/markdown_files/: 10.26434_chemrxiv-2024-1l0sn.mmd
content/evaluations/: evaluations.html  evaluations.ipynb
content/finetune/: Llama_results.json  OpenAI_results.json  choosing_paradigm.html  choosing_paradigm.ipynb  sft_results.json
content/intro_figure/: datacite_datasets.csv  figure1_intro_notebook.html  figure1_intro_notebook.ipynb  wos_materials_papers.csv  zenodo_datasets.csv
content/intro_figure/iframe_figures/: figure_34.html  figure_35.html  figure_36.html  figure_43.html
content/intro_figure/wos_results/: 2Dmaterials.csv  battery_cathode.csv  biomaterials.csv  mofs.csv  nanoparticles.csv  photocatalytic.csv  polymers.csv  semiconductor.csv  thermoelectric.csv
content/obtaining_data/: annotation.html  annotation.ipynb  buchwald-hartwig_coupling_results.json  crossref_search.html  crossref_search.ipynb  data_mining.html  data_mining.ipynb  index.html  index.md  obtaining_data.qmd
content/ocr/nougat/: nougat.ipynb
content/perovskite/: conclusion_df.csv  constrained_data.json  constrained_formulas.html  constrained_formulas.ipynb  paper.md  results_screening.csv  unconstrained_data.json  validated_data.json
content/reaction_case/: reaction.html  reaction.ipynb  reactions.json
context_window/: Dealing_with_context_window.ipynb
diagrams/: Background.drawio  agent.drawio  chunking_idea.drawio  figure_2.drawio  fine_tuning.drawio  general.drawio
document_parsing_and_cleaning/: cleaning.ipynb  parsing.ipynb
document_parsing_and_cleaning/XML_files/: ao0c01342.xml
finetune/: Llama_results.json  OpenAI_results.json  agent.ipynb  choosing_paradigm.ipynb  data.ipynb  ft_plotting.ipynb  llama_groq.ipynb  main_finetune.ipynb  openai.ipynb  sft_inf.ipynb  sft_results.json  test.json
finetune/mlx/: data.csv  filtered_data.txt  finetune_on_mac.ipynb  lora.py  models.py  test.txt  train.txt  val.txt
finetune/mlx/mistral-mlx/: params.json
finetune/qlora/: tune.ipynb
obtaining data/: buchwald-hartwig_coupling_results.json
obtaining_data/: annotation.ipynb  buchwald-hartwig_coupling_ChemRxiv.jsonl  crossref_search.ipynb  data_mining.ipynb  obtaining_data.ipynb
package/: requirements.txt  setup.py
package/llmstructdata/: __init__.py  book.mplstyle  utils.py
