[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matextract"
version = "0.1.1"
description = "Style and Imports for the Structured Data Extraction Book"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Mara Wilhelmi"},
    {name = "Martino Rios Garcia"},
    {name = "Sherjeel Shabih"},
    {name = "Maria Victoria Gil Matellanes"},
    {name = "Santiago Miret"},
    {name = "Christoph Koch"},
    {name = "Pepe Marquez"},
    {name = "Kevin Maik Jablonka", email = "mail@kjablonka.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Core ML/DL dependencies
    "torch==2.2.1",
    "transformers==4.38.2",
    "accelerate==0.32.1",
    "datasets==2.20.0",
    "evaluate==0.4.2",
    "scikit-learn==1.4.1.post1",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scipy==1.12.0",
    "matplotlib==3.8.3",
    "pillow==10.2.0",
    "pytorch-lightning==2.2.1",
    "bert-score==0.3.13",
    "bitsandbytes==0.42.0",

    # LLM and text processing
    "langchain==0.1.11",
    "langchain-community==0.0.27",
    "chromadb==0.5.4",
    "unstructured==0.12.5",
    "openai==1.13.3",
    "beautifulsoup4==4.12.3",
    "gensim==4.3.2",

    # Document processing
    "easyocr==1.7.1",
    "arxiv==2.1.3",
    "bibtexparser==1.4.1",
    "crossrefapi==1.6.0",

    # Web and API
    "fastapi==0.111.1",
    "flask==3.0.3",
    "aiohttp==3.9.5",
    "requests-oauthlib==2.0.0",

    # Utilities
    "pydantic>=2.0.0",
    "click==8.1.7",
    "tqdm>=4.66.0",
    "typing-extensions>=4.9.0",
    "jupyter-book==1.0.0",
    "huggingface-hub==0.21.4"
]

[project.urls]
Repository = "https://github.com/lamalab-org/how-to-extract-structured-data-with-llm"

[tool.hatch.build.targets.wheel]
packages = ["package/matextract"]
