[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matextract"
version = "0.1.1"
description = "Style and Imports for the Structured Data Extraction Book"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Mara Wilhelmi"},
    {name = "Martino Rios Garcia"},
    {name = "Sherjeel Shabih"},
    {name = "Maria Victoria Gil Matellanes"},
    {name = "Santiago Miret"},
    {name = "Christoph Koch"},
    {name = "Pepe Marquez"},
    {name = "Kevin Maik Jablonka", email = "mail@kjablonka.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Core ML/DL dependencies
    "torch>=2.3.1,<3.0.0",
    "transformers>=4.42.4,<5.0.0",
    "accelerate>=0.32.1,<1.0.0",
    "datasets>=2.20.0,<3.0.0",
    "evaluate>=0.4.2,<1.0.0",
    "scikit-learn>=1.5.1,<2.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.13.1,<2.0.0",
    "matplotlib>=3.9.1,<4.0.0",
    "pillow>=9.5.0,<10.0.0",
    "pytorch-lightning>=2.3.3,<3.0.0",
    "bert-score>=0.3.13,<1.0.0",
    "bitsandbytes>=0.42.0,<1.0.0",
    "peft>=0.11.1,<1.0.0",
    "trl>=0.9.6,<1.0.0",
    "sentence-transformers>=3.0.1,<4.0.0",

    # LLM and text processing
    "langchain>=0.2.9,<1.0.0",
    "langchain-community>=0.2.7,<1.0.0",
    "chromadb>=0.5.4,<1.0.0",
    "unstructured>=0.12.5,<1.0.0",
    "openai>=1.35.14,<2.0.0",
    "litellm>=1.41.25,<2.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "gensim>=4.3.2,<5.0.0",
    "instructor>=1.3.5,<2.0.0",

    # Document processing
    "easyocr>=1.7.1,<2.0.0",
    "arxiv>=2.1.3,<3.0.0",
    "bibtexparser>=1.4.1,<2.0.0",
    "crossrefapi>=1.6.0,<2.0.0",
    "pint>=0.24.3,<1.0.0",
    "nougat-ocr>=0.1.17,<1.0.0",
    "paperscraper>=0.2.13,<1.0.0",
    "python-doctr>=0.8.1,<1.0.0",

    # Chemistry tools
    "rdkit>=2024.3.3,<2025.0.0",
    "pubchempy>=1.0.4,<2.0.0",
    "pymatgen>=2024.6.10,<2025.0.0",
    "pymatviz>=0.9.2,<1.0.0",
    "molscribe @ git+https://github.com/thomas0809/MolScribe.git@main#egg=MolScribe",
    "rxnscribe @ git+https://github.com/thomas0809/RxnScribe.git@ad6b1c75d40e563e68deca0491918885948d69c7",

    # Web and API
    "fastapi>=0.111.1,<1.0.0",
    "flask>=3.0.3,<4.0.0",
    "aiohttp>=3.9.5,<4.0.0",
    "requests-oauthlib>=2.0.0,<3.0.0",
    "backoff>=2.2.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",

    # Utilities
    "pydantic>=2.8.2,<3.0.0",
    "click>=8.1.7,<9.0.0",
    "tqdm>=4.66.6,<5.0.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "jupyter-book>=0.15.1,<1.0.0",
    "huggingface-hub>=0.24.0,<1.0.0",
    "pystow>=0.5.4,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "diskcache>=5.6.3,<6.0.0"
]

[project.urls]
Repository = "https://github.com/lamalab-org/how-to-extract-structured-data-with-llm"

[tool.hatch.build.targets.wheel]
packages = ["package/matextract"]
