[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matextract"
version = "0.1.1"
description = "Style and Imports for the Structured Data Extraction Book"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Mara Wilhelmi"},
    {name = "Martino Rios Garcia"},
    {name = "Sherjeel Shabih"},
    {name = "Maria Victoria Gil Matellanes"},
    {name = "Santiago Miret"},
    {name = "Christoph Koch"},
    {name = "Pepe Marquez"},
    {name = "Kevin Maik Jablonka", email = "mail@kjablonka.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "accelerate>=0.32.1",
    "aiohttp>=3.9.5",
    "albumentations>=1.1.0",
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.12.3",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.42.0",
    "chromadb>=0.5.4",
    "crossrefapi>=1.6.0",
    "datasets>=2.20.0",
    "easyocr>=1.7.1",
    "evaluate>=0.4.2",
    "fastapi>=0.111.1",
    "gensim>=4.3.2",
    "groq>=0.9.0",
    "huggingface-hub>=0.24.0",
    "instructor>=1.3.5",
    "jupyter>=1.0.0",
    "jupyter-book>=1.0.2",
    "langchain>=0.2.9",
    "litellm>=0.2.1",
    "langchain-community>=0.2.7",
    "langchain-openai>=0.1.17",
    "matplotlib>=3.9.1",
    "molscribe @ git+https://github.com/thomas0809/MolScribe.git@main",
    "numpy>=1.26.4",
    "openai>=1.35.14",
    "pandas>=2.0.0",
    "paperscraper>=0.2.13",
    "pdf2image>=1.17.0",
    "peft>=0.11.1",
    "pillow>=9.5.0",
    "plotly>=5.22.0",
    "pymatgen>=2024.6.10",
    "pymatviz>=0.9.2",
    "python-doctr>=0.8.1",
    "pytorch-lightning>=2.3.3",
    "pystow",
    "rdkit>=2024.3.3",
    "rxnscribe @ git+https://github.com/thomas0809/RxnScribe.git@ad6b1c75d40e563e68deca0491918885948d69c7",
    "scholarly>=1.7.11",
    "scikit-learn>=1.5.1",
    "scipy>=1.13.1",
    "sentence-transformers>=3.0.1",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "transformers>=4.42.4",
    "trl>=0.9.6",
    "unstructured>=0.15.0"
]

[project.urls]
Repository = "https://github.com/lamalab-org/how-to-extract-structured-data-with-llm"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["package/matextract"]
